<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/navigation_view"
        android:title="@string/view"
        android:icon="@drawable/view_icon"/>

    <item
        android:id="@+id/navigation_add"
        android:title="@string/add"
        android:icon="@drawable/add1600"/>

    <item
        android:id="@+id/navigation_search"
        android:title="@string/search"
        android:icon="@drawable/search"/>
    </group>
</menu>