<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="1dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:background="@color/transparent"
                    android:layout_margin="5dp"
                    android:id="@+id/et_View_Title" />

                <View
                    android:layout_marginTop="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_View_Notes"
                    android:background="@color/transparent"
                    android:hint="@string/notes"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="20dp"/>
                <View
                    android:layout_marginTop="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_View_Picture"
                    android:background="@color/transparent"
                    android:hint="@string/picture"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>



        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btn_View_Update"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/updatenote"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginTop="35dp"/>

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btn_View_Delete"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/deletenote"
            android:textColor="@color/cardview_dark_background"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</ScrollView>